# ml-study

./: .gitignore  app.js
birds/: rustfmt.toml
birds/front/: index.html  index.js  package-lock.json  package.json
birds/libs/genetic-algorithm/: Cargo.toml
birds/libs/genetic-algorithm/src/: chromosome.rs  gaussian_mutation.rs  genetic_algoritym.rs  lib.rs  roulette_wheel_selection.rs  uniform_crossover.rs
birds/libs/neural-network/: Cargo.toml
birds/libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  network.rs  neuron.rs
birds/libs/simulation/: Cargo.toml
birds/libs/simulation-wasm/: Cargo.toml
birds/libs/simulation-wasm/src/: lib.rs
birds/libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  simulation.rs  world.rs
simple-neural-network/: index.html  readme.md  styles.css
