[package]
edition = "2021"
name = "lib-genetic-algorithm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

[dependencies.web-sys]
features = [
  'console',
]
version = "0.3.57"
