[package]
edition = "2021"
name = "lib-simulation-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
lib-simulation = {path = "../simulation"}
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
